# comp0034-wk7

./: .gitignore  README.md  paralympics.sqlite  pyproject.toml  requirements.txt
activities/: 1-dash.md  1-flask.md  dash-0-intro.md  dash-1-line-chart.md  dash-2-bar-chart.md  dash-3-scatter-map.md  dash-4-stats-card.md  dash-5-challenge.md  flask-0-intro.md  flask-1-event-page.md  flask-2-home-page.md  flask-3-chart-page.md
data/: create_db_dash.py
paralympics_dash/: paralympics_dash_grid.py
paralympics_flask/: __init__.py  views.py
paralympics_flask/templates/: index.html  index_responsive.html
src/flask_iris/: create_ml_model.py  routes.py
src/paralympics_dash/: create_db_dash.py  paralympics.sqlite  paralympics_dash.py  paralympics_dash_dbc.py  paralympics_dash_grid.py
src/paralympics_dash_multi/: paralympics.sqlite
src/paralympics_dash_multi/pages/: charts.py
src/paralympics_flask/: __init__.py  figures.py  forms.py  models.py  views.py
src/paralympics_flask/templates/: base.html  chart.html  events.html  form_macros.html  index.html  index_css.html  index_html.html  index_jinja.html
src/paralympics_rest/: __init__.py  error_handlers.py  helpers.py  routes.py  schemas.py  utils.py
src/sqlalchemy_dash_example/: add_data.py  app.py  chart.py  models.py  server.py
